<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:cardElevation="1dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_margin="20dp"
            android:gravity="center"
            android:orientation="vertical">

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/textViewName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:hint="@string/userName"
            android:inputType="numberDecimal"
            android:text=""
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/colorPrimaryDark"
            android:textSize="20sp"
            app:met_baseColor="#0056d3"
            app:met_floatingLabel="highlight"
            app:met_primaryColor="#982360"
            app:met_singleLineEllipsis="true"/>

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/textViewEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:hint="@string/userEmail"
            android:inputType="numberDecimal"
            android:text=""
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/colorPrimaryDark"
            android:textSize="20sp"
            app:met_baseColor="#0056d3"
            app:met_floatingLabel="highlight"
            app:met_primaryColor="#982360"
            app:met_singleLineEllipsis="true"/>

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/textViewPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:hint="@string/userPhone"
            android:inputType="numberDecimal"
            android:text=""
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/colorPrimaryDark"
            android:textSize="20sp"
            app:met_baseColor="#0056d3"
            app:met_floatingLabel="highlight"
            app:met_primaryColor="#982360"
            app:met_singleLineEllipsis="true"/>

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/textViewSex"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:hint="@string/userSex"
            android:inputType="numberDecimal"
            android:text=""
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/colorPrimaryDark"
            android:textSize="20sp"
            app:met_baseColor="#0056d3"
            app:met_floatingLabel="highlight"
            app:met_primaryColor="#982360"
            app:met_singleLineEllipsis="true"/>

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/textViewAge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:hint="@string/userAge"
            android:inputType="numberDecimal"
            android:text=""
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/colorPrimaryDark"
            android:textSize="20sp"
            app:met_baseColor="#0056d3"
            app:met_floatingLabel="highlight"
            app:met_primaryColor="#982360"
            app:met_singleLineEllipsis="true"/>

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/textViewHeight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:hint="@string/userHeight"
            android:inputType="numberDecimal"
            android:text=""
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/colorPrimaryDark"
            android:textSize="20sp"
            app:met_baseColor="#0056d3"
            app:met_floatingLabel="highlight"
            app:met_primaryColor="#982360"
            app:met_singleLineEllipsis="true"/>

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/textViewWeight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:hint="@string/userWeight"
            android:inputType="numberDecimal"
            android:text=""
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/colorPrimaryDark"
            android:textSize="20sp"
            app:met_baseColor="#0056d3"
            app:met_floatingLabel="highlight"
            app:met_primaryColor="#982360"
            app:met_singleLineEllipsis="true"/>

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/textViewIbw"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:hint="@string/userIbw"
            android:inputType="numberDecimal"
            android:text=""
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/colorPrimaryDark"
            android:textSize="20sp"
            app:met_baseColor="#0056d3"
            app:met_floatingLabel="highlight"
            app:met_primaryColor="#982360"
            app:met_singleLineEllipsis="true"/>

        </LinearLayout>
    </ScrollView>







</androidx.cardview.widget.CardView>