<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:cardElevation="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:orientation="vertical">

        <com.rengwuxian.materialedittext.MaterialEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/emailField"
            android:hint="@string/email_field_hint"
            android:inputType="textEmailAddress"
            android:text=""
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/colorPrimaryDark"
            android:textSize="20sp"
            app:met_floatingLabel="highlight"
            app:met_baseColor="#0056d3"
            app:met_primaryColor="#982360"
            app:met_singleLineEllipsis="true">
        </com.rengwuxian.materialedittext.MaterialEditText>

        <com.rengwuxian.materialedittext.MaterialEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/passField"
            android:hint="@string/password_field_hint"
            android:inputType="textPassword"
            android:text=""
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/colorPrimaryDark"
            android:textSize="20sp"
            app:met_floatingLabel="highlight"
            app:met_baseColor="#0056d3"
            app:met_primaryColor="#982360"
            app:met_singleLineEllipsis="true">
        </com.rengwuxian.materialedittext.MaterialEditText>

        <com.rengwuxian.materialedittext.MaterialEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/nameField"
            android:hint="@string/name_field_hint"
            android:inputType="text"
            android:text=""
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/colorPrimaryDark"
            android:textSize="20sp"
            app:met_floatingLabel="highlight"
            app:met_baseColor="#0056d3"
            app:met_primaryColor="#982360"
            app:met_singleLineEllipsis="true">
        </com.rengwuxian.materialedittext.MaterialEditText>

        <com.rengwuxian.materialedittext.MaterialEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/telField"
            android:hint="@string/tel_field_hint"
            android:inputType="phone"
            android:text=""
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/colorPrimaryDark"
            android:textSize="20sp"
            app:met_floatingLabel="highlight"
            app:met_baseColor="#0056d3"
            app:met_primaryColor="#982360"
            app:met_singleLineEllipsis="true">
        </com.rengwuxian.materialedittext.MaterialEditText>
    </LinearLayout>

</androidx.cardview.widget.CardView>